--- a/index.html
+++ b/index.html
@@ -15,43 +15,44 @@
 
       #uploadForm {
         position: absolute;
-        bottom: 120px;
-        left: 20px;
-        right: 20px;
-        background: rgba(255, 255, 255, 0.9);
-        padding: 20px;
-        border-radius: 12px;
-        font-size: 18px;
+        bottom: 200px;
+        left: 50%;
+        transform: translateX(-50%);
+        background: rgba(255, 255, 255, 0.95);
+        padding: 25px;
+        border-radius: 15px;
+        font-size: 20px;
         box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-        max-width: 400px;
-        margin: auto;
+        width: 90%;
+        max-width: 500px;
       }
 
       #uploadForm label {
         display: block;
-        margin-bottom: 12px;
+        margin-bottom: 16px;
         font-weight: bold;
       }
 
       #uploadForm input[type="file"],
       #uploadForm input[type="submit"] {
         width: 100%;
-        font-size: 16px;
-        padding: 10px;
-        margin-top: 10px;
+        font-size: 18px;
+        padding: 12px;
+        margin-top: 12px;
         border: 1px solid #ccc;
-        border-radius: 6px;
+        border-radius: 8px;
         box-sizing: border-box;
       }
 
       #githubLink {
         position: absolute;
-        bottom: 20px;
-        left: 20px;
-        background: rgba(255, 255, 255, 0.9);
-        padding: 12px 18px;
-        border-radius: 10px;
-        font-size: 18px;
+        bottom: 100px;
+        left: 50%;
+        transform: translateX(-50%);
+        background: rgba(255, 255, 255, 0.95);
+        padding: 16px 22px;
+        border-radius: 12px;
+        font-size: 20px;
         box-shadow: 0 4px 10px rgba(0,0,0,0.2);
       }
 
@@ -67,18 +68,21 @@
 
       @media (max-width: 600px) {
         #uploadForm {
-          font-size: 16px;
-          padding: 15px;
+          font-size: 18px;
+          padding: 20px;
+          bottom: 180px;
         }
 
         #uploadForm input[type="file"],
         #uploadForm input[type="submit"] {
-          font-size: 15px;
+          font-size: 17px;
+          padding: 10px;
         }
 
         #githubLink {
-          font-size: 16px;
-          padding: 10px 14px;
+          font-size: 18px;
+          padding: 14px 18px;
+          bottom: 90px;
         }
       }
     </style>
