--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 
     #uploadForm {
       position: absolute;
-      bottom: 160px;
-      left: 50%;
-      transform: translateX(-50%);
+      top: 20%;
+      left: 5%;
+      transform: none;
       background: rgba(255, 255, 255, 0.9);
-      padding: 20px 25px;
+      padding: 15px 20px;
       border-radius: 15px;
-      font-size: 22px;
+      font-size: 18px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-      width: 90%;
-      max-width: 500px;
+      width: 80%;
+      max-width: 300px;
       text-align: center;
       z-index: 10;
     }
@@ -33,7 +33,7 @@
     #uploadForm input[type="file"],
     #uploadForm input[type="submit"] {
       margin-top: 15px;
-      font-size: 20px;
+      font-size: 16px;
       padding: 10px;
       width: 100%;
       border-radius: 10px;
@@ -166,6 +166,3 @@
   </script>
 </body>
 </html>
-
-
-   
