--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     #uploadForm {
       position: absolute;
       top: 20%;
-      left: 5%;
-      transform: none;
+      left: 50%;
+      transform: translateX(-50%);
       background: rgba(255, 255, 255, 0.9);
-      padding: 15px 20px;
+      padding: 10px 15px;
       border-radius: 15px;
-      font-size: 18px;
+      font-size: 16px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-      width: 80%;
-      max-width: 300px;
+      width: 90%;
+      max-width: 280px;
       text-align: center;
       z-index: 10;
     }
@@ -33,7 +33,7 @@
     #uploadForm input[type="file"],
     #uploadForm input[type="submit"] {
       margin-top: 15px;
-      font-size: 16px;
+      font-size: 15px;
       padding: 10px;
       width: 100%;
       border-radius: 10px;
@@ -48,7 +48,7 @@
 
     #githubLink {
       position: absolute;
-      bottom: 60px;
+      bottom: 30px; /* Se bajó desde 60px */
       left: 50%;
       transform: translateX(-50%);
       background: rgba(255, 255, 255, 0.9);
