--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Subida de trabajos</title>
+  <title>soluciones tecnologicas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.js"></script>
   <script src="sketch.js"></script>
@@ -16,7 +16,7 @@
 
     #uploadForm {
       position: absolute;
-      top: 55%; /* ↓ Ajustado para bajar el formulario */
+      top: 85%; /* ↓ Ajustado para bajar el formulario */
       left: 50%;
       transform: translateX(-50%);
       background: rgba(255, 255, 255, 0.9);
