--- a/proyectos.html
+++ b/proyectos.html
@@ -93,7 +93,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
   
   <!-- El archivo p5.js -->
-  <script src="sketch.js"></script>
+  <script src="proyectos.js"></script>
 
   <!-- Descripción del Proyecto -->
   <div class="project-description">
